# amami

./: .gitignore  AUTHORS  CONTRIBUTING.md  CONTRIBUTORS  ChangeLog  README.md  amami_design.drawio  requirements.yml  results.prof  review.md  setup.cfg  setup.py
.conda/: build_env.yaml  meta.yaml
.github/workflows/: cd.yaml
amami/: __init__.py  _atm_stashlist.py  amami.py  cli.py  exceptions.py  helpers.py  loggers.py  modify_ancil.py  parsers.py  rich_amami.py  stash_utils.py  test.py  um2nc.py  um_utils.py
amami.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  pbr.json  requires.txt
amami/commands/: test.py  um2nc.py
amami/core/: __init__.py  modify.py  um2nc.py
amami/io/: __init__.py
amami/loggers/: __init__.py
amami/misc_utils/: __init__.py
amami/netcdf_utils/: __init__.py
amami/old/: count_land_points.py  regrid_ancil.py
amami/parsers/: __init__.py  core.py  main_parser.py  modify_parser.py  test_parser.py  um2nc_parser.py
amami/stash_utils/: __init__.py  atm_stashlist.py
amami/tests/: test_stash.py  test_um_utils.py
amami/um_utils/: __init__.py  validation_tools.py
tests/: test_modify  tests_um2nc
tests/test_um2nc/: tests_um2nc
umami/: __init__.py  count_land.py  count_land_points.py  modify_ancil.py  regrid_ancil.py  test  um2nc.py  validate.py  validate_ancil.py
umami.egg-info/: PKG-INFO  SOURCES.txt  pbr.json
umami/ancil_utils/: __init__.py  stash_utils.py  validation_tools.py
umami/netcdf_utils/: __init__.py
umami/quieterrors/: __init__.py
umami/stash_utils/: __init__.py
umami/um_utils/: __init__.py  validation_tools.py
umami/utils/: __init__.py  validation_tools.py
