[metadata]
name = amami
version = 0.0.1
author = Davide Marchegiani
author_email = davide.marchegiani@anu.edu.au
summary = ACCESS Models Ancillary Manipulation Instruments
description_file = README.md
licence = Apache 2.0
classifier =
    Development Status :: 1 - Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3

[files]
packages = find:

[flake8]
exclude = __init__.py
max-line-length = 120
max-complexity = 18
select = B,C,E,F,W,T4,B9
ignore = E203,W503
