[metadata]
name = amami
summary = ACCESS Models Ancillary Manipulation Instruments
version = 0.0.2
description_file = README.md
url=https://github.com/ACCESS-NRI/amami
author = Davide Marchegiani
author_email = davide.marchegiani@anu.edu.au
licence = Apache 2.0
classifier =
    Development Status :: 2 - Pre-Beta
    Intended Audience :: Science/Research
    Environment :: Console
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.9

[files]
packages = amami

[options]
include_package_data = True

[options.package_data]
'amami': ['py.typed']

[entry_points]
console_scripts = 
    amami=amami.cli:main